# DMS-Arsipin-Sync

./: README-MAC.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  config.rs  folder_cache.rs  lib.rs  main.rs  sync.rs  tray.rs  watcher.rs
src/components/: Dashboard.tsx  LoginPage.tsx  Settings.tsx
