[package]
name = "dms-sync"
version = "1.1.0"
description = "DMS Arsipin Desktop Sync Client"
authors = ["DMS Arsipin"]
edition = "2021"

[package.metadata]


[lib]
name = "dms_sync_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["cookies", "json", "multipart"] }
tokio = { version = "1", features = ["full"] }
notify = { version = "7", features = ["macos_fsevent"] }
dirs = "6"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
png = "0.17"
